Clean up input focus code, fix layout bugs for Firefox

--- a/src/hub/css/tray.css
+++ b/src/hub/css/tray.css
@@ -58,7 +58,7 @@
   background: #fff;
   border-left: 1px solid rgba(0, 0, 0, 0.14);
   border-right: 1px solid rgba(0, 0, 0, 0.14);
-  height: 16rem;
+  min-height: 16rem;
   padding: 1.5rem 1.75rem;
 }
 
@@ -111,6 +111,7 @@
   resize: none;
 }
 
-.wgsa-tray__content button {
-  float: right;
+.wgsa-tray-actions {
+  display: flex;
+  justify-content: flex-end;
 }
